src/main/java/com/example/loginapp/_core/error/ex/Exception401.java
package com.example.loginapp._core.error.ex;

public class Exception401 extends RuntimeException {
    public Exception401(String message) {
        super(message);
    }
}
